Added page-title to the styles for entry-title

--- a/style.css
+++ b/style.css
@@ -1160,7 +1160,8 @@ a:hover, a:focus, a:active {
 }
 
 /* line 7, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
-.entry-title {
+.entry-title,
+.page-title {
   font-size: 1.5rem;
   margin: 0 0 .5em 0;
   text-align: center;
@@ -1168,13 +1169,14 @@ a:hover, a:focus, a:active {
   letter-spacing: 0.3125rem;
 }
 
-/* line 14, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
-.entry-title a {
+/* line 15, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+.entry-title a,
+.page-title a {
   text-decoration: none;
   border-bottom: 1px solid black;
 }
 
-/* line 29, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 30, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .entry-footer,
 .post-navigation,
 .comments-area {
@@ -1182,7 +1184,7 @@ a:hover, a:focus, a:active {
   margin: 0 auto 0.75em auto;
 }
 
-/* line 40, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 41, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .entry-footer > *,
 .post-navigation > *,
 .comments-area > * {
@@ -1196,41 +1198,41 @@ a:hover, a:focus, a:active {
   display: table;
 }
 
-/* line 49, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 50, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .sticky {
   display: block;
 }
 
-/* line 53, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 54, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .most-recent-post {
   margin-bottom: 1.5em;
 }
 
-/* line 56, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 57, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .most-recent-post h2 {
   margin-bottom: 0.375em;
 }
 
-/* line 61, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 62, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .wp-post-image {
   margin-bottom: 1.5em;
   margin-right: auto;
   margin-left: auto;
 }
 
-/* line 67, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 68, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .byline,
 .updated:not(.published) {
   display: none;
 }
 
-/* line 72, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 73, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .single .byline,
 .group-blog .byline {
   display: inline;
 }
 
-/* line 77, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 78, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .page-content,
 .entry-content,
 .entry-summary {
@@ -1238,18 +1240,18 @@ a:hover, a:focus, a:active {
   margin: 0 auto 1.5em auto;
 }
 
-/* line 84, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 85, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .page-links {
   clear: both;
   margin: 0 0 1.5rem 0;
 }
 
-/* line 89, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 90, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .edit-link {
   text-align: center;
 }
 
-/* line 92, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 93, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .description {
   max-width: 92.5em;
   margin-left: auto;
@@ -1263,7 +1265,7 @@ a:hover, a:focus, a:active {
   clear: both;
 }
 
-/* line 96, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 97, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .gallery {
   max-width: 92.5em;
   margin-left: auto;
@@ -1277,37 +1279,37 @@ a:hover, a:focus, a:active {
   clear: both;
 }
 
-/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 102, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .index-grid .wp-post-image {
   margin: 0;
 }
 
-/* line 135, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 136, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .index-description {
   width: 66.6666666667%;
   float: left;
 }
 
-/* line 138, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 139, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .index-image {
   width: 33.3333333333%;
   float: left;
 }
 
-/* line 143, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 144, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .posted-on-meta {
   text-align: center;
   margin-bottom: 1em;
 }
 
-/* line 148, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 149, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .image-exif-list {
   list-style: none;
   padding: 0;
   margin-left: 0;
 }
 
-/* line 156, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+/* line 157, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
 .blog .format-aside .entry-title,
 .archive .format-aside .entry-title {
   display: none;
@@ -1948,7 +1950,7 @@ textarea {
   display: none;
 }
 
-@media (min-width: 360px) and (max-width: 640px) {/* line 100, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 360px) and (max-width: 640px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 50%;
     float: left;
@@ -2147,7 +2149,7 @@ textarea {
   }
 }
 
-@media (min-width: 641px) and (max-width: 768px) {/* line 100, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 641px) and (max-width: 768px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 33.3333333333%;
     float: left;
@@ -2170,10 +2172,11 @@ textarea {
   }
 }
 
-@media (min-width: 768px) {/* line 14, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
-  .entry-title a {
+@media (min-width: 768px) {/* line 15, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+  .entry-title a,
+  .page-title a {
     padding: 0 1em;
-  }/* line 29, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+  }/* line 30, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .entry-footer,
   .post-navigation,
   .comments-area {
@@ -2266,7 +2269,7 @@ textarea {
   }
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {/* line 100, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 769px) and (max-width: 1024px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 25%;
     float: left;
@@ -2314,13 +2317,14 @@ textarea {
   .custom-logo {
     margin: 0;
   }/* line 7, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
-  .entry-title {
+  .entry-title,
+  .page-title {
     font-size: 2.25rem;
     margin-bottom: 1em;
   }
 }
 
-@media (min-width: 1025px) and (max-width: 1366px) {/* line 100, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 1025px) and (max-width: 1366px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 20%;
     float: left;
@@ -2359,7 +2363,7 @@ textarea {
   }
 }
 
-@media (min-width: 1367px) and (max-width: 1679px) {/* line 100, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 1367px) and (max-width: 1679px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 16.6666666667%;
     float: left;
@@ -2397,7 +2401,7 @@ textarea {
   }
 }
 
-@media (min-width: 1680px) {/* line 100, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 1680px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 16.6666666667%;
     float: left;
@@ -2435,7 +2439,7 @@ textarea {
   }
 }
 
-@media (max-width: 359px) {/* line 100, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (max-width: 359px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 100%;
     float: left;
