--- a/assets/sass/modules/_content.scss
+++ b/assets/sass/modules/_content.scss
@@ -4,7 +4,8 @@
 
 // Posts and pages
 
-.entry-title {
+.entry-title,
+.page-title {
 	font-size: rem(24);
 	margin: 0 0 .5em 0;
 	text-align: center;
