Fixed dribbble spelling and brand color

--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -32,7 +32,7 @@ $color-gallery: #eeeeee;
 $color-whitesmoke: #f1f1f1;
 
 // Social Media Colors
-$color-dribbble: #0063dc;
+$color-dribbble: #ea4c89;
 $color-facebook: #3b5998;
 $color-flickr: #0063dc;
 $color-google-plus: #dd4b39;
