--- a/style.css
+++ b/style.css
@@ -1505,7 +1505,7 @@ textarea {
 
 /* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-dribbble:hover {
-  fill: #0063dc;
+  fill: #ea4c89;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_icons.scss */
