--- a/assets/sass/modules/_header.scss
+++ b/assets/sass/modules/_header.scss
@@ -30,11 +30,12 @@
 .site-description {
 	font-size: rem(18);
 	font-weight: 200;
-	margin: 0 0 rem(32) 0;
+	margin: 0;
 	text-align: center;
 
 	@include susy-media($tablet-landscape) {
 		text-align: left;
+		margin: 0 0 rem(32) 0;
 	}
 }
 
