--- a/assets/sass/utilities/variables/_breakpoints.scss
+++ b/assets/sass/utilities/variables/_breakpoints.scss
@@ -5,9 +5,9 @@
 /// Standard Media Query Breakpoints
 /// @group wds
 
-$large-desktop: 1680px;
-$desktop: 1366px;
-$tablet-landscape: 1024px;
-$tablet-portrait: 768px;
-$phone-landscape: 640px;
-$phone-portrait: 360px;
+$large-desktop: rem(1680);
+$desktop: rem(1366);
+$tablet-landscape: rem(1024);
+$tablet-portrait: rem(768);
+$phone-landscape: rem(640);
+$phone-portrait: rem(360);
