--- a/style.css
+++ b/style.css
@@ -1150,11 +1150,11 @@ a:hover, a:focus, a:active {
 .site-description {
   font-size: 1.125rem;
   font-weight: 200;
-  margin: 0 0 2rem 0;
+  margin: 0;
   text-align: center;
 }
 
-/* line 53, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_header.scss */
+/* line 54, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_header.scss */
 .custom-logo {
   margin: 0 auto;
 }
@@ -1950,7 +1950,7 @@ textarea {
   display: none;
 }
 
-@media (min-width: 360px) and (max-width: 640px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 22.5rem) and (max-width: 40rem) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 50%;
     float: left;
@@ -1968,7 +1968,7 @@ textarea {
   }
 }
 
-@media (min-width: 640px) {/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_navigation.scss */
+@media (min-width: 40rem) {/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_navigation.scss */
   .menu-toggle {
     display: none;
   }/* line 56, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_navigation.scss */
@@ -2022,7 +2022,7 @@ textarea {
   }/* line 5, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_header.scss */
   .site-title {
     font-size: 2.25rem;
-  }/* line 41, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_header.scss */
+  }/* line 42, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_header.scss */
   .site-branding {
     text-align: center;
   }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_icons.scss */
@@ -2149,7 +2149,7 @@ textarea {
   }
 }
 
-@media (min-width: 641px) and (max-width: 768px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 41rem) and (max-width: 48rem) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 33.3333333333%;
     float: left;
@@ -2172,7 +2172,7 @@ textarea {
   }
 }
 
-@media (min-width: 768px) {/* line 15, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 48rem) {/* line 15, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .entry-title a,
   .page-title a {
     padding: 0 1em;
@@ -2269,7 +2269,7 @@ textarea {
   }
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 49rem) and (max-width: 64rem) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 25%;
     float: left;
@@ -2297,7 +2297,7 @@ textarea {
   }
 }
 
-@media (min-width: 1024px) {/* line 56, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_navigation.scss */
+@media (min-width: 64rem) {/* line 56, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_navigation.scss */
   .main-navigation {
     width: 50%;
     float: left;
@@ -2308,12 +2308,13 @@ textarea {
   }/* line 30, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_header.scss */
   .site-description {
     text-align: left;
-  }/* line 41, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_header.scss */
+    margin: 0 0 2rem 0;
+  }/* line 42, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_header.scss */
   .site-branding {
     width: 50%;
     float: left;
     text-align: left;
-  }/* line 53, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_header.scss */
+  }/* line 54, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_header.scss */
   .custom-logo {
     margin: 0;
   }/* line 7, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
@@ -2324,7 +2325,7 @@ textarea {
   }
 }
 
-@media (min-width: 1025px) and (max-width: 1366px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 65rem) and (max-width: 85.375rem) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 20%;
     float: left;
@@ -2357,13 +2358,13 @@ textarea {
   }
 }
 
-@media (min-width: 1366px) {/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/structure/_layout.scss */
+@media (min-width: 85.375rem) {/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/structure/_layout.scss */
   .site-content {
     margin: 2.5rem auto 3.75rem;
   }
 }
 
-@media (min-width: 1367px) and (max-width: 1679px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 86.375rem) and (max-width: 104rem) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 16.6666666667%;
     float: left;
@@ -2401,7 +2402,7 @@ textarea {
   }
 }
 
-@media (min-width: 1680px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (min-width: 105rem) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 16.6666666667%;
     float: left;
@@ -2439,7 +2440,7 @@ textarea {
   }
 }
 
-@media (max-width: 359px) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
+@media (max-width: 21.5rem) {/* line 101, /Applications/MAMP/htdocs/photography/wp-content/themes/simple-photo-blog/assets/sass/modules/_content.scss */
   .index-grid {
     width: 100%;
     float: left;
